--- a/src/aclib/ac_tlm/Makefile.am
+++ b/src/aclib/ac_tlm/Makefile.am
@@ -7,10 +7,10 @@ AM_CPPFLAGS = -I. -I$(top_srcdir)/src/aclib/ac_core -I$(top_srcdir)/src/aclib/ac
 noinst_LTLIBRARIES = libactlm.la
 
 ## ArchC library includes
-include_HEADERS = ac_tlm_protocol.H ac_tlm_port.H ac_tlm_intr_port.H ac_intr_handler.H ac_tlm_dev_id.H tlm_payload_dir_extension.h
+include_HEADERS = ac_tlm_protocol.H ac_tlm_port.H ac_tlm_intr_port.H ac_intr_handler.H ac_tlm_dev_id.H tlm_payload_dir_extension.h ac_tlm_signal_port.H
 
 #libactlm_la_SOURCES = ac_tlm_port.cpp ac_tlm_intr_port.cpp ac_tlm_dev_id.cpp 
-libactlm_la_SOURCES = ac_tlm_port.cpp ac_tlm2_port.cpp ac_tlm2_nb_port.cpp ac_tlm_intr_port.cpp ac_tlm_dev_id.cpp
+libactlm_la_SOURCES = ac_tlm_port.cpp ac_tlm2_port.cpp ac_tlm2_nb_port.cpp ac_tlm_intr_port.cpp ac_tlm_dev_id.cpp ac_tlm_signal_port.cpp
 
 if HAVE_TLM2
 AM_CPPFLAGS += @TLM2_CFLAGS@
